# studypal

./: .gitignore  AGENTS.md  ClassRoomPlan.md  Desc.md  IMPLEMENTATION_PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: translation-plugin-report.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  session.rs  translation.rs
src-tauri/src/database/: mod.rs
src-tauri/src/tts/: edge_tts.rs  mod.rs  qwen_tts.rs
src-tauri/src/web_search/: brave.rs  duckduckgo.rs  mod.rs  serper.rs  tavily.rs
src/application/hooks/: use-routed-chat.ts
src/application/services/: chat-routing-service.test.ts  chat-routing-service.ts  classroom-generation-service.ts  file-persistence-service.ts  file-session-manager.ts  llm-pool-health-check.ts  provider-capability-detector.ts  provider-colors.ts  provider-memory-service.ts  session-manager.ts  task-distributor.ts  translation-service.ts
src/application/store/: ai-chat-store.ts  ai-store.ts  classroom-store.ts  document-metadata-store.ts  file-store.ts  llm-pool-store.ts  note-store.ts  notification-store.ts  session-store.ts  settings-store.ts  theme-store.ts  topic-store.ts  translation-store.ts
src/config/: endpoints.ts
src/domain/models/: ai-context.ts  discuss-prompt.ts  errors.test.ts  errors.ts  file.ts  llm-pool.ts  logging.ts  note.ts  plugin.ts  topic.ts
src/infrastructure/: paper-downloader.ts  web-service.ts
src/infrastructure/logging/: logger.ts  (+1 more)
src/test/: setup.ts
(+87 files in other folders)
